<resources>
    <string name="app_name">Apps Locker</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="system_apps">System Apps</string>
    <string name="installed_apps">Installed Apps</string>
    <string name="all_apps">All Apps</string>
    <string name="settings">Settings</string>
    <string name="lock">Locks Related</string>
    <string name="change_lock_type">Set Lock Type</string>
    <string name="change_pattern">Set Pattern</string>
    <string name="change_pin">Set Pin</string>
    <string name="others">Others</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="unlock_all">Unlock All</string>
    <string name="unlocked">Unlocked</string>
    <string name="systemappsname">SystemAppsName</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="create_pattern">Create Pattern</string>
    <string name="confirm_pattern">Confirm Pattern</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="draw_pattern">Draw Pattern</string>
    <string name="draw_to_confirm">Draw again to Confirm</string>
    <string name="enter_your_pin">Enter Your Pin</string>
    <string name="create_pin">Create Pin </string>
    <string name="set_your_pin_code">Set Your Pin Code</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="type_your_pin_again">Type Your Pin Again</string>

</resources>
