<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/all_apps"
        android:icon="@drawable/appslist"
        android:title="@string/all_apps" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />
    <item android:title="@string/lock">
        <menu >
            <item
                android:id="@+id/lock_type"
                android:icon="@drawable/lock_type"
                android:title="@string/change_lock_type" />

            <item
                android:id="@+id/change_pattern"
                android:icon="@drawable/all_apps"
                android:title="@string/change_pattern" />
            <item
                android:id="@+id/change_pin"
                android:icon="@drawable/change_pin"
                android:title="@string/change_pin" />


        </menu>
    </item>
    <item android:title="@string/others">

        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/about"
                android:title="@string/about" />
            <item
                android:id="@+id/exit"
                android:icon="@drawable/exit"
                android:title="@string/exit" />

        </menu>
    </item>




</menu>